# pico506

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/fatfs/: CMakeLists.txt  ffconfig.h
lib/lt_logger/: CMakeLists.txt  lt_config.h  lt_logger.c  lt_logger.h
lib/sdlib/: CMakeLists.txt  sd.c  sd.h  sd_debug.c  sd_defs.h  sd_priv.h  sd_spi.c
src/: CMakeLists.txt  clicker.c  config.h  diskio.c  pico506.c  pico506.h  st506.c  storage.c  utils.c  utils.h
src/pio/: rll_2of7.pio  st506_data_ro.pio  st506_pio_util.h  st506_rddt.pio  st506_rdgt.pio  st506_step.pio  st506_wrdt.pio  st506_wrgt.pio  st506_wrrm.pio
